syntax = "proto3";

option csharp_namespace = "Shared.Protos";

package chat.authorization;

service ChatAuthorizationService {
  rpc CheckAccess (CheckAccessRequest) returns (CheckAccessResponse);
  rpc CheckAccessBatch (CheckAccessBatchRequest) returns (CheckAccessBatchResponse);
  rpc GetChatParticipants (GetChatParticipantsRequest) returns (GetChatParticipantsResponse);
}

message CheckAccessRequest {
  int32 user_id = 1;
  int32 chat_room_id = 2;
}

message CheckAccessResponse {
  bool has_access = 1;
  string error_message = 2;
}

message CheckAccessBatchRequest {
  repeated CheckAccessRequest checks = 1;
}

message CheckAccessBatchResponse {
  repeated ChatAccessResult results = 1;
}

message ChatAccessResult {
  int32 user_id = 1;
  int32 chat_room_id = 2;
  bool has_access = 3;
}

message GetChatParticipantsRequest {
  int32 chat_room_id = 1;
  int32 chat_room_type = 2;
}

message GetChatParticipantsResponse {
  repeated int32 participant_ids = 1;
  bool success = 2;
  string error_message = 3;
}